test/liftedConsuming5_2.slq
def main() {
    x := H(0:ğ”¹);
    t := X(x);
    y := !t;
    forget(t); /// error
}
